--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Meet landing page</title>
-</head>
-<body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  Download v1.3
-  What is it?
+    <title>Meet landing page: Mobile first using Flex</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo"><img src="assets/logo.svg" alt="meet logo" /></div>
+      <div class="hero-banner">
+        <div class="hero-banner-left"></div>
+        <div class="hero-banner-right"></div>
+      </div>
+    </header>
+    <div class="main">
+      <div class="intro">
+        <h1>Group Chat for Everyone</h1>
+        <p>
+          Meet makes it easy to connect with others face-to-face virtually and
+          collaborate across any device.
+        </p>
+        <div class="buttons">
+          <button class="download">
+            Download <span class="version">v1.3</span>
+          </button>
+          <button class="what-is-it">What is it?</button>
+        </div>
+      </div>
 
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3
-</body>
+      <div class="section-one">
+        <div class="round-number">01</div>
+        <div class="image-section">
+          <img src="assets/desktop/image-woman-in-videocall.jpg" alt="" />
+          <img src="assets/desktop/image-women-videochatting.jpg" alt="" />
+          <img src="assets/desktop/image-men-in-meeting.jpg" alt="" />
+          <img src="assets/desktop/image-man-texting.jpg" alt="" />
+        </div>
+        <h3>Built for modern use</h3>
+        <h2>Smarter meetings, all in one place</h2>
+        <p>
+          Send messages, share files, show your screen, and record your meetings
+          — all in one workspace. Control who can join with invite-only team
+          access, data encryption, and data export.
+        </p>
+      </div>
+    </div>
+    <div class="section-two">
+      <div class="round-number two">02</div>
+      <div class="image-section-footer">
+        <div class="footer-text">
+          <h2>Experience more together</h2>
+          <p>
+            Stay connected with reliable HD meetings and unlimited one-on-one
+            and group video sessions.
+          </p>
+        </div>
+        <div class="buttons">
+          <button class="download">
+            Download <span class="footer-version">v1.3</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
