--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><img src="assets/logo.svg" alt="meet logo" /></div>
+      <div class="logo"><img src="starter-code/assets/logo.svg" alt="meet logo" /></div>
       <div class="hero-banner">
         <div class="hero-banner-left"></div>
         <div class="hero-banner-right"></div>
